set background image in main grid section

--- a/grid.html
+++ b/grid.html
@@ -9,8 +9,7 @@
   <header>
     Header
   </header>
-  <main>
-    Main
+  <main class="main">
   </main>
   <aside>
     <form action="/my-handling-form-page" method="post">
