added grid template areas to body

--- a/grid.html
+++ b/grid.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" type="text/css" href="grid.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     Header
   </header>
   <main class="main">
   </main>
-  <aside>
+  <aside class=form>
     <form action="/my-handling-form-page" method="post">
       <div>
         <label for="first-name">First Name:</label>
@@ -57,7 +57,7 @@
 
     </form>
   </aside>
-  <footer>
+  <footer class="footer">
     Footer
   </footer>
 
