changed viewport height on background image, added fonts

--- a/grid.html
+++ b/grid.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>title</title>
   <link rel="stylesheet" type="text/css" href="grid.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:800|Raleway" rel="stylesheet">
 </head>
 <body>
   <header class="header">
-    Header
+    Win a Trip to the Bahamas!
   </header>
   <main class="main">
   </main>
