--- a/grid.html
+++ b/grid.html
@@ -14,20 +14,20 @@
   </main>
   <aside class=form>
     <form action="/my-handling-form-page" method="post">
-      <div>
-        <label for="first-name">First Name:</label>
+      <div class="form-label">
+        <label for="first-name">First Name:</label><br/>
         <input type="text" id="first-name" name="user_first_name">
       </div>
-      <div>
-        <label for="last-name">Last Name:</label>
+      <div class="form-label">
+        <label for="last-name">Last Name:</label><br/>
         <input type="text" id="last-name" name="user_last_name">
       </div>
-      <div>
-        <label for="address">Address:</label>
+      <div class="form-label">
+        <label for="address">Address:</label><br/>
         <input type="text" id="address" name="user_address">
       </div>
-      <div>
-        <label for="province">Province:</label>
+      <div class="form-label">
+        <label for="province">Province:</label><br/>
         <select name="province" form="form">
           <option value="alberta">Alberta</option>
           <option value="british-columbia">British Columbia</option>
@@ -44,22 +44,22 @@
           <option value="yukon">Yukon</option>
         </select>
       </div>
-      <div>
-        <label for="postal-code">Postal Code:</label>
+      <div class="form-label">
+        <label for="postal-code">Postal Code:</label><br/>
         <input type="text" id="postal-code" name="user_postal_code">
       </div>
-      <div>
-        <label for="mail">E-mail:</label>
+      <div class="form-label">
+        <label for="mail">E-mail:</label><br/>
         <input type="email" id="mail" name="user_mail">
       </div>
       <div class="button">
-        <button type="submit">Enter Now</button>
+        <button type="button" id="button">Enter Now</button>
       </div>
 
     </form>
   </aside>
   <footer class="footer">
-    Footer
+    Go to www.winatripbahamas.com for more information!
   </footer>
 
   </body>
