added header bar and repositioned main text

--- a/grid.html
+++ b/grid.html
@@ -2,15 +2,21 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>title</title>
+  <title>Landing Page</title>
   <link rel="stylesheet" type="text/css" href="grid.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:800|Raleway" rel="stylesheet">
 </head>
 <body>
   <header class="header">
-    Win a Trip to the Bahamas!
+    <div class=logo>LOGO</div>
   </header>
   <main class="main">
+    <h1 class="main-title">
+      Win a Trip to the Bahamas!
+    </h1>
+      <p class="p-main">
+        Spyglass spanker swing the lead belaying pin cog take a caulk bowsprit me rutters careen barkadeer hornswaggle main sheet long clothes scallywag avast pink quarterdeck topsail maroon Sink me belay lee shrouds stern chase warp fire in the hole keel weigh anchor Barbary Coast hang the jib brig measured fer yer chains black spot fire ship clipper heave down cable gally transom six pounders broadside fore.
+      </p>
   </main>
   <aside class=form>
     <form action="/my-handling-form-page" method="post">
