--- a/grid.html
+++ b/grid.html
@@ -15,7 +15,7 @@
       Win a Trip to the Bahamas!
     </h1>
       <p class="p-main">
-        Spyglass spanker swing the lead belaying pin cog take a caulk bowsprit me rutters careen barkadeer hornswaggle main sheet long clothes scallywag avast pink quarterdeck topsail maroon Sink me belay lee shrouds stern chase warp fire in the hole keel weigh anchor Barbary Coast hang the jib brig measured fer yer chains black spot fire ship clipper heave down cable gally transom six pounders broadside fore.
+        Spyglass spanker swing the lead belaying pin cog take a caulk bowsprit me rutters careen barkadeer hornswaggle main sheet long clothes scallywag avast pink quarterdeck topsail maroon Sink me belay lee shrouds stern chase warp fire in the hole.
       </p>
   </main>
   <aside class=form>
@@ -61,7 +61,6 @@
       <div class="button">
         <button type="button" id="button">Enter Now</button>
       </div>
-
     </form>
   </aside>
   <footer class="footer">
