added logo and form text

--- a/grid.html
+++ b/grid.html
@@ -8,17 +8,26 @@
 </head>
 <body>
   <header class="header">
-    <div class=logo>LOGO</div>
+    <div class=logo>
+      <img src="img/travel-tours-logo.png" alt="travel-tours-logo" style="
+    width: 150px;
+    padding: 10px">
+    </div>
   </header>
   <main class="main">
-    <h1 class="main-title">
-      Win a Trip to the Bahamas!
-    </h1>
-      <p class="p-main">
-        Spyglass spanker swing the lead belaying pin cog take a caulk bowsprit me rutters careen barkadeer hornswaggle main sheet long clothes scallywag avast pink quarterdeck topsail maroon Sink me belay lee shrouds stern chase warp fire in the hole.
-      </p>
+    <div class="main-text">
+      <h1 class="main-title">
+        Win a Trip to the Bahamas!
+      </h1>
+        <p class="p-main">
+          Win an all-inclusive trip of a lifetime to the Bahamas from
+          Travel Tours. All you need to do is fill out the form for
+          your chance to win this amazing prize!
+        </p>
+    </div>
   </main>
   <aside class=form>
+    <p class="form-text">Enter your info for a chance to win a trip to the Bahamas exclusively from Travel Tours</p>
     <form action="/my-handling-form-page" method="post">
       <div class="form-label">
         <label for="first-name">First Name:</label><br/>
