working on adjusting cta image

--- a/grid.html
+++ b/grid.html
@@ -15,16 +15,16 @@
     </div>
   </header>
   <main class="main">
-    <div class="main-text">
       <h1 class="main-title">
         Win a Trip to the Bahamas!
       </h1>
         <p class="p-main">
-          Win an all-inclusive trip of a lifetime to the Bahamas from
-          Travel Tours. All you need to do is fill out the form for
-          your chance to win this amazing prize!
+          Win an all-inclusive trip of a lifetime to the Bahamas from Travel Tours. All you need to do is fill out the form for your chance to win this amazing prize!
         </p>
-    </div>
+          <div class="cta-airplane">
+            <img src="img/css-grid-airplane-01.png" alt="airplane" style="width: 80%;
+            margin: -10% 0 0 20%;">
+          </div>
   </main>
   <aside class=form>
     <p class="form-text">Enter your info for a chance to win a trip to the Bahamas exclusively from Travel Tours</p>
